# MacHelix

./: .compile  .gitignore  LICENSE  README.md  buildServer.json
Helix/: HelixApp.swift
HelixTests/: HelixTests.swift
HelixUITests/: HelixUITests.swift  HelixUITestsLaunchTests.swift
MacHelix/: MacHelixApp.swift
MacHelix.xcodeproj/: project.pbxproj
MacHelix.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
MacHelix/Assets.xcassets/AppIcon.appiconset/: Contents.json
MacHelixTests/: MacHelixTests.swift
MacHelixUITests/: MacHelixUITests.swift  MacHelixUITestsLaunchTests.swift
Modules/: Package.swift
Modules/Common/: Color.swift
Modules/Feature/AppFeature/: AppFeature.swift  ContentView.swift  HelixView.swift
Modules/Feature/FinderFeature/: FinderFeature.swift  FinderModel.swift  FinderView.swift
Modules/Feature/HelixFeature/: HelixFeature.swift  IPCManager.swift
Modules/Feature/TerminalFeature/: TermView.swift  TerminalFeature.swift  TerminalHolder.swift  TerminalManager.swift
helix/: .gitrepo
helix/helix-ipc/: Cargo.toml
helix/helix-ipc/src/: ipc.rs  lib.rs
helix/helix-term/: Cargo.toml
helix/helix-term/src/: application.rs  args.rs  ipc.rs  lib.rs  main.rs
helix/helix-term/src/commands/: typed.rs
helix/helix-view/: Cargo.toml
helix/helix-view/src/: editor.rs
