[package]
name = "helix-ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "macros", "fs"] }
